--- a/style.css
+++ b/style.css
@@ -3,12 +3,24 @@
   margin: 0;
 }
 
+.body {
+  background: #2eaac9;
+}
+
 .container {
   display: flex;
   flex-direction: column;
   align-items: center;
   padding-top: 50px;
-  background-color: #e1e3ea;
-  height: 100px;
-  font-family: sans-serif;
+  justify-content: center;
+  text-align: center;
+  margin-bottom: 20px;
+}
+.button {
+  height: 50px;
+  width: 100px;
+  background-color: aquamarine;
+  border-radius: 5px;
+  border-color: #2eaac9;
+  margin: 5px;
 }
