--- a/style.css
+++ b/style.css
@@ -8,8 +8,6 @@ body {
   flex-direction: column;
   align-items: center;
   padding-top: 50px;
-  justify-content: center;
-  text-align: center;
   margin-bottom: 20px;
 }
 .button {
@@ -33,11 +31,34 @@ body {
   display: flex;
   flex-direction: column;
   align-content: space-around;
-  flex-wrap: wrap;
+ 
 }
 
-.user {
-  height: 100px;
-  width: 100px;
-  
+.content_page {
+  display: flex;
+  text-align: right;
+  flex-direction: column;
+  align-content: space-around;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+}
+
+.cost-container {
+  display: flex;
+  align-items: center;
+}
+
+.result {
+  margin-right: 10px;
+}
+
+.img1 {
+  width: 15px;
+  height: 15px;
+}
+
+@media (max-width:768px) {
+  .body {
+    width: 1000px;
+  }
 }
